

Changes to current CVS
======================

Changes that could break older environments
-------------------------------------------

* [Type Checker] fixed ClassAny.navigateParameterized and OclAnyImpl.findMethod
  [OCL Library]  to also include methods defined by java.lang.Object if the original
                 classifier is an interface.

* [Type Checker] fixed ClassAny.navigateParameterized and OclAnyImpl.findMethod
  [OCL Library]  to also include methods defined by interfaces extended by other
                 interfaces.

* [Injector]     Added onFileDocComment to TaskInstrumentor.java .

Other changes
-------------
* [Java Code Generator]
                 Fixed generation of "->excluding", so that a cast is generated, too.

* [Type Checker] Enhanced DefaultTypeFactory to recognize collection types.

* [OCL Editor]   Improved handling of unusable buttons in the OCL Editor.
                 These are now made invisible as opposed to just greying
                 them out. This was asked for by issue #647 as filed
                 against ArgoUML.

* [Type Checker] Improved error reports in Collection.navigateParameterized()

* [Build System] Added this file together with a release policy.
                 Therefore, this section is by no means complete.

* [Type Checker] Introduced Type2


Fixed bugs
----------
* [Java Code Generator]
                 Fixed generation of "->excluding", so that a cast is generated, too.

* [Type Checker] Enhanced DefaultTypeFactory to recognize collection types.

* [Type Checker] fixed ClassAny.navigateParameterized and OclAnyImpl.findMethod
  [OCL Library]  to also include methods defined by java.lang.Object if the original
                 classifier is an interface.

* [Type Checker] fixed ClassAny.navigateParameterized and OclAnyImpl.findMethod
  [OCL Library]  to also include methods defined by interfaces extended by other
                 interfaces.
